Set up the index.page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 ---
 layout: default
+title: Agilent Technologies iLab Design Guidelines
 ---
 
 <div class="home">
+
+The iLab Design Guidelines are intended to create a uniform and intuitive standard for design. This guide will not solve every problem, but should serve as starting point to decision making.
+
+
 
 
 </div>
