Fix some wording.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Agilent Technologies iLab Design Guidelines
 
 <div class="home">
 
-The iLab Design Guidelines are intended to create a uniform and intuitive standard for design. This guide will not solve every problem, but should serve as starting point to decision making.
+The iLab Design Guidelines are intended to create a uniform and intuitive
+standard for design. This guide will not solve every problem, but should serve
+as starting point for decision making.
 
 </div>
